MDEV-5101 INFORMATION_SCHEMA.PROCESSLIST reports an incorrect value for Time for connecting threads

by convention query execution time should be 0 if its start_time is 0
(this was lost when fixing MDEV-4578)